@@ -18,6 +18,9 @@ Version 1.5.3
 - BUG: Sometimes conficts were shown as 'add's in the progress dialog. (Stefan)
 - BUG: Moving a file to the "ignore-on-commit" changelist removed the check
        but the file would still get committed. (Stefan)
+- BUG: When starting TortoiseProc with '*' separated, relative file paths, the 
+       commit dialog would either just flash and exit or not show all the 
+       files from all specified paths. (Stefan)
 
 Version 1.5.2
 - BUG: the "SVN Copy and Add" right-drag menu was not shown. (Stefan)
